--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,10 +1,10 @@
 [user]
     name = slaveng22
     email = 117160808+slaveng22@users.noreply.github.com
-    signingkey = ~/.ssh/id_rsa_github.pub
+    signingkey = ~/.ssh/id_rsa_github
 
 [core]
-    sshCommand = ssh -i ~/.ssh/id_rsa_github.pub
+    sshCommand = ssh -i ~/.ssh/id_rsa_github
 
 [push]
     default = current
@@ -14,6 +14,7 @@
 
 [commit]
     gpgSign = true
+    gpg.format = ssh
 
 [tag]
     forceSignAnnotated = true
